--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,10 @@
 {
   "name": "server",
   "version": "1.0.0",
+  "proxy": "http://localhost:3000/",
   "description": "DocConnect - A social media application to increase communications between the employees of a hospital",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -10,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "mongoose": "^8.1.0",
     "nodemon": "^3.0.3"
