--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.3",
+    "stream-chat": "^8.14.5",
+    "stream-chat-react": "^11.4.0",
+    "universal-cookie": "^7.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
