--- a/server/package.json
+++ b/server/package.json
@@ -14,11 +14,14 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "getstream": "^8.4.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "stream-chat": "^8.14.5"
   }
 }
