--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.21.3",
     "stream-chat": "^8.14.5",
     "stream-chat-react": "^11.4.0",
